--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,8 @@ div#prize-draw {
             background-color: #111012;
             border-radius: .5rem;
             color: aliceblue;
-            border: 1px solid #111012;
+            outline: 1px solid var(--content-primary);
+            border: 0.5px solid var(--content-primary);
            
             font-size: 2rem;
             font-weight: 900;
@@ -79,14 +80,21 @@ div#prize-draw {
             &::placeholder {
                 text-align: center;      
             }
+
+            &:focus, :active {
+                text-align: center;
+            }
             
-        & input#number:focus {
-            padding: 5rem;
-        }
+       
         
     }
 }
 }
+
+input#input2:not(:focus), input#input1:not(:focus) {
+    text-align: center;
+}
+
 
 #chk {
     display: none;
@@ -134,6 +142,7 @@ position: absolute;
     border-radius: 5rem;
     background-color: var(--background-tertiary);
     position: relative;
+    margin-bottom: 2rem;
 
 
      & button {
@@ -144,8 +153,44 @@ position: absolute;
         cursor: pointer;
         position: absolute;
         height: 100%;
-        width: 100%;
+        width: 102%;
         font-size: 1.2rem;
         font-weight: 700;
+        
     } 
+
+    /* & button:hover {
+        color: var(--background-tertiary);
+        background-color: white
+    } */
 }
+
+a {
+    text-decoration: none;
+}
+
+img {
+    transition: transform 1s;
+}
+
+img[src*="logo"]:hover {
+    transform: rotate(90deg);
+}
+
+h1 {
+    transform: rotate();
+}
+
+p#one {
+    color: var(--content-secondary);
+}
+
+html {
+    zoom: 0.8;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+        input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
